Updated template.html Added `Abilities' section to the infobox.

--- a/eng/template.html
+++ b/eng/template.html
@@ -56,6 +56,13 @@
             Indescribable
           </p>
         </div>
+        <!-- Abilities -->
+        <div id="Abilities">
+          <p>
+            <span id="AbilitiesTitle">Abilities</span><br />
+            Unknown
+          </p>
+        </div>
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
