Updated template.html Added `Sex Assigned at Birth' section to the infobox.

--- a/eng/template.html
+++ b/eng/template.html
@@ -63,6 +63,13 @@
             Unknown
           </p>
         </div>
+        <!-- Sex Assigned at Birth -->
+        <div id="SexAssignedAtBirth">
+          <p>
+            <span id="SexAssignedAtBirthTitle">Sex assigned at birth</span><br />
+            AMAB
+          </p>
+        </div>
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
