Updated template.html Imported the JavaScript file `dialog.js'.

--- a/eng/template.html
+++ b/eng/template.html
@@ -408,5 +408,6 @@
     </footer>
     <!-- JavaScript -->
     <script src="../js/index.js"></script>
+    <script src="../js/dialog.js"></script>
   </body>
 </html>
