Updated template.html Added a button that brings up a modal dialog explaining the sex assigned at birth.

--- a/eng/template.html
+++ b/eng/template.html
@@ -68,7 +68,15 @@
         <div id="SexAssignedAtBirth">
           <p>
             <span id="SexAssignedAtBirthTitle">Sex assigned at birth</span><br />
-            AMAB
+            <span class="inline-button-companion">AMAB</span>
+            <dialog>
+              <button autofocus>Close</button>
+              <p>
+                So And So is AMAB (assigned male at birth).
+                This means that they were born with primarily male characteristics.
+              </p>
+            </dialog>
+            <button>Explanation</button>
           </p>
         </div>
       </div>
