Updated template.html Removed the unneccessary <span> element.

--- a/eng/template.html
+++ b/eng/template.html
@@ -68,7 +68,7 @@
         <div id="SexAssignedAtBirth">
           <p>
             <span id="SexAssignedAtBirthTitle">Sex assigned at birth</span><br />
-            <span class="inline-button-companion">AMAB</span>
+            AMAB
             <dialog>
               <button autofocus>Close</button>
               <p>
