Updated template.html Replaced the lead / summary paragraph with an appropriate placeholder.

--- a/eng/template.html
+++ b/eng/template.html
@@ -98,10 +98,17 @@
         </nav>
         <!-- Summary -->
         <p id="LeadText">
-          The template (<span class="japanese" lang="ja-JP">テンプレート</span> <span class="romaji">tenpurēto</span>) that is being used is quite useful.
-          For example, this lead text / summary is quite good for summarising the page.
-          Of course, the individual section are meant to be where you go into detail.
-          In other words, this opening paragraph is your summary!
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Integer scelerisque mauris felis, id fermentum velit vestibulum ut.
+          Phasellus nec felis neque.
+          Aliquam blandit quam scelerisque ligula volutpat porttitor.
+          Aenean efficitur luctus scelerisque.
+          Proin tristique fringilla ligula, sit amet fringilla nunc pretium quis.
+          Vestibulum interdum tempus metus, ornare iaculis lacus sodales ac.
+          Pellentesque odio nulla, mollis a consequat et, sodales in metus.
+          In hac habitasse platea dictumst.
+          Sed scelerisque magna sit amet lobortis malesuada.
+          Phasellus malesuada orci ut ex sodales tempus vel nec augue.
         </p>
       </section>
       <!-- Section 1 -->
