Updated template.html Added a couple of page control buttons. More specifically, one for toggling the infobox on or off, and another for toggle the theme between dark (default) and light.

--- a/eng/template.html
+++ b/eng/template.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="../css/dialog.css" />
   </head>
   <body>
+    <!-- Some page controls -->
+    <button id="InfoboxToggle" type="button" onclick="ToggleInfobox()">Toggle Infobox</button>
+    <button id="DarkLightMode" type="button" onclick="ToggleTheme()">Toggle theme</button>
     <!-- This header would be the "title" of the page -->
     <header>
       <h1 id="Head">Page Template</h1>
