Updated template.html Imported JavaScript file `pageControl.js`.

--- a/eng/template.html
+++ b/eng/template.html
@@ -427,5 +427,6 @@
     <!-- JavaScript -->
     <script src="../js/index.js"></script>
     <script src="../js/dialog.js"></script>
+    <script src="../js/pageControl.js"></script>
   </body>
 </html>
