--- a/gallery/art.html
+++ b/gallery/art.html
@@ -10,14 +10,14 @@
     <!-- The CSS stylesheet -->
     <link rel="stylesheet" href="./art.css" />
   </head>
-  <body>
-    <header>
+  <body id="DocumentBody">
+    <header id="PageHead">
       <h1 id="Art_Gallery">Art Gallery</h1>
     </header>
-    <main>
+    <main id="PageBody">
       
     </main>
-    <footer>
+    <footer id="PageFoot">
       
     </footer>
     <!-- JavaScript -->
