--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <!-- The CSS stylesheet -->
     <link rel="stylesheet" href="css/index.css" />
   </head>
-  <body>
-    <header>
+  <body id="DocumentBody">
+    <header id="PageHead">
       <h1 id="Head">
         Ten'en Kansekiri ~ Brilliance of Heaven Pleasure<br />
         Creation God Record<br />
         Welcome
       </h1>
     </header>
-    <main>
+    <main id="PageBody">
       <button id="Hello" type="button" onclick="HelloWorld()">Hello world :3</button>
       <p>Hello, and welcome!</p>
       <p>This is the HTML version of the Creation God Record.</p>
@@ -42,7 +42,7 @@
       </p>
       <a id="ReturnToTop" href="#Head">Return to the top</a>
     </main>
-    <footer>
+    <footer id="PageFoot">
       <p>
         © 2024 Niji System<br />
         No rights reserved.
