Updated template.html Added a `Gender' section to the infobox.

--- a/eng/template.html
+++ b/eng/template.html
@@ -83,6 +83,20 @@
             <button>Explanation</button>
           </p>
         </div>
+        <!-- Gender -->
+        <div id="Gender">
+          <p>
+            <span id="GenderTitle">Gender</span><br />
+            Cis man
+            <dialog>
+              <button autofocus>Close</button>
+              <p>
+                So And So is cisgender, meaning that they identify as the gender that they were assigned at birth.
+              </p>
+            </dialog>
+            <button>Explanation</button>
+          </p>
+        </div>
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
