Updated template.html Lead and section paragraphs are now justified.

--- a/eng/template.html
+++ b/eng/template.html
@@ -99,7 +99,7 @@
           </details>
         </nav>
         <!-- Summary -->
-        <p id="LeadText">
+        <p id="LeadText" class="cleanly-defined-edges">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Integer scelerisque mauris felis, id fermentum velit vestibulum ut.
           Phasellus nec felis neque.
@@ -119,7 +119,7 @@
         <h2 id="Section_One" class="section-title">Item 1</h2>
         <hr />
         <!-- Section body (Note that `lorem ipsum' is, of course, used here as a placeholder) -->
-        <p>
+        <p class="cleanly-defined-edges">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Integer scelerisque mauris felis, id fermentum velit vestibulum ut.
           Phasellus nec felis neque.
@@ -132,7 +132,7 @@
           Sed scelerisque magna sit amet lobortis malesuada.
           Phasellus malesuada orci ut ex sodales tempus vel nec augue.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Curabitur ut porttitor elit, sed convallis risus.
           Suspendisse ornare scelerisque purus, a tempor felis blandit eu.
           Phasellus tempus sapien et molestie placerat.
@@ -145,7 +145,7 @@
           Donec congue risus velit, sit amet suscipit arcu convallis ac.
           Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Ut ullamcorper risus a accumsan rutrum.
           Mauris vel dolor eleifend, elementum ante sed, condimentum purus.
           Mauris aliquet mi non augue consequat, eu rhoncus est pellentesque.
@@ -156,7 +156,7 @@
           Integer ut lacus arcu.
           Duis viverra, ipsum ac fringilla sollicitudin, turpis dolor rhoncus sapien, eget accumsan eros mi sit amet risus.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Curabitur sit amet euismod ligula.
           Sed in metus tellus.
           Vestibulum convallis arcu at laoreet sollicitudin.
@@ -171,7 +171,7 @@
           Duis pretium rhoncus velit in cursus.
           Morbi varius, nulla sit amet ullamcorper lobortis, urna metus venenatis nulla, finibus lobortis erat lorem ut nibh.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Morbi ullamcorper elit vitae ex malesuada, in sagittis quam malesuada.
           Donec vel aliquet risus.
           Donec suscipit bibendum sodales.
@@ -194,7 +194,7 @@
         <h2 id="Section_Two" class="section-title">Item 2</h2>
         <hr />
         <!-- Section body (Note that `lorem ipsum' is, of course, used here as a placeholder) -->
-        <p>
+        <p class="cleanly-defined-edges">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Integer scelerisque mauris felis, id fermentum velit vestibulum ut.
           Phasellus nec felis neque.
@@ -207,7 +207,7 @@
           Sed scelerisque magna sit amet lobortis malesuada.
           Phasellus malesuada orci ut ex sodales tempus vel nec augue.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Curabitur ut porttitor elit, sed convallis risus.
           Suspendisse ornare scelerisque purus, a tempor felis blandit eu.
           Phasellus tempus sapien et molestie placerat.
@@ -220,7 +220,7 @@
           Donec congue risus velit, sit amet suscipit arcu convallis ac.
           Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Ut ullamcorper risus a accumsan rutrum.
           Mauris vel dolor eleifend, elementum ante sed, condimentum purus.
           Mauris aliquet mi non augue consequat, eu rhoncus est pellentesque.
@@ -231,7 +231,7 @@
           Integer ut lacus arcu.
           Duis viverra, ipsum ac fringilla sollicitudin, turpis dolor rhoncus sapien, eget accumsan eros mi sit amet risus.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Curabitur sit amet euismod ligula.
           Sed in metus tellus.
           Vestibulum convallis arcu at laoreet sollicitudin.
@@ -246,7 +246,7 @@
           Duis pretium rhoncus velit in cursus.
           Morbi varius, nulla sit amet ullamcorper lobortis, urna metus venenatis nulla, finibus lobortis erat lorem ut nibh.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Morbi ullamcorper elit vitae ex malesuada, in sagittis quam malesuada.
           Donec vel aliquet risus.
           Donec suscipit bibendum sodales.
@@ -269,7 +269,7 @@
         <h2 id="Section_Three" class="section-title">Item 3</h2>
         <hr />
         <!-- Section body (Note that `lorem ipsum' is, of course, used here as a placeholder) -->
-        <p>
+        <p class="cleanly-defined-edges">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Integer scelerisque mauris felis, id fermentum velit vestibulum ut.
           Phasellus nec felis neque.
@@ -282,7 +282,7 @@
           Sed scelerisque magna sit amet lobortis malesuada.
           Phasellus malesuada orci ut ex sodales tempus vel nec augue.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Curabitur ut porttitor elit, sed convallis risus.
           Suspendisse ornare scelerisque purus, a tempor felis blandit eu.
           Phasellus tempus sapien et molestie placerat.
@@ -295,7 +295,7 @@
           Donec congue risus velit, sit amet suscipit arcu convallis ac.
           Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Ut ullamcorper risus a accumsan rutrum.
           Mauris vel dolor eleifend, elementum ante sed, condimentum purus.
           Mauris aliquet mi non augue consequat, eu rhoncus est pellentesque.
@@ -306,7 +306,7 @@
           Integer ut lacus arcu.
           Duis viverra, ipsum ac fringilla sollicitudin, turpis dolor rhoncus sapien, eget accumsan eros mi sit amet risus.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Curabitur sit amet euismod ligula.
           Sed in metus tellus.
           Vestibulum convallis arcu at laoreet sollicitudin.
@@ -321,7 +321,7 @@
           Duis pretium rhoncus velit in cursus.
           Morbi varius, nulla sit amet ullamcorper lobortis, urna metus venenatis nulla, finibus lobortis erat lorem ut nibh.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Morbi ullamcorper elit vitae ex malesuada, in sagittis quam malesuada.
           Donec vel aliquet risus.
           Donec suscipit bibendum sodales.
@@ -344,7 +344,7 @@
         <h2 id="Section_Four" class="section-title">Item 4</h2>
         <hr />
         <!-- Section body (Note that `lorem ipsum' is, of course, used here as a placeholder) -->
-        <p>
+        <p class="cleanly-defined-edges">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Integer scelerisque mauris felis, id fermentum velit vestibulum ut.
           Phasellus nec felis neque.
@@ -357,7 +357,7 @@
           Sed scelerisque magna sit amet lobortis malesuada.
           Phasellus malesuada orci ut ex sodales tempus vel nec augue.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Curabitur ut porttitor elit, sed convallis risus.
           Suspendisse ornare scelerisque purus, a tempor felis blandit eu.
           Phasellus tempus sapien et molestie placerat.
@@ -370,7 +370,7 @@
           Donec congue risus velit, sit amet suscipit arcu convallis ac.
           Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Ut ullamcorper risus a accumsan rutrum.
           Mauris vel dolor eleifend, elementum ante sed, condimentum purus.
           Mauris aliquet mi non augue consequat, eu rhoncus est pellentesque.
@@ -381,7 +381,7 @@
           Integer ut lacus arcu.
           Duis viverra, ipsum ac fringilla sollicitudin, turpis dolor rhoncus sapien, eget accumsan eros mi sit amet risus.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Curabitur sit amet euismod ligula.
           Sed in metus tellus.
           Vestibulum convallis arcu at laoreet sollicitudin.
@@ -396,7 +396,7 @@
           Duis pretium rhoncus velit in cursus.
           Morbi varius, nulla sit amet ullamcorper lobortis, urna metus venenatis nulla, finibus lobortis erat lorem ut nibh.
         </p>
-        <p>
+        <p class="cleanly-defined-edges">
           Morbi ullamcorper elit vitae ex malesuada, in sagittis quam malesuada.
           Donec vel aliquet risus.
           Donec suscipit bibendum sodales.
