Updated template.html Reimported JavaScript file `dialog.js'.

--- a/eng/template.html
+++ b/eng/template.html
@@ -425,6 +425,7 @@
     </footer>
     <!-- JavaScript -->
     <script src="../js/index.js"></script>
+    <script src="../js/dialog.js"></script>
     <script src="../js/pageControl.js"></script>
   </body>
 </html>
