--- a/eng/template.html
+++ b/eng/template.html
@@ -10,6 +10,7 @@
     <!-- The CSS stylesheet -->
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/wiki.css" />
+    <link rel="stylesheet" href="../css/dialog.css" />
   </head>
   <body id="DocumentBody">
     <!-- Some page controls -->
