Updated template.html Added the explanation dialog for sex assigned at birth. (This'll especially be helpful for if a character is intersex.  Just put the explanation in there! >_O)

--- a/eng/template.html
+++ b/eng/template.html
@@ -74,6 +74,13 @@
             <span id="SexAssignedAtBirthTitle">Sex assigned at birth</span><br />
             AMAB
           </p>
+          <dialog id="SexExplanation">
+            <button id="btnCloseSexExplanantion" type="button" onclick="CloseModal('btnCloseSexExplanantion', 'SexExplanation')" autofocus>Close</button>
+            <p>
+              Example was assigned male at birth, meaning they were born with primarily male characteristics.
+            </p>
+          </dialog>
+          <button id="btnOpenSexExplanation" type="button" onclick="OpenModal('btnOpenSexExplanation', 'SexExplanation')">Explanation</button>
         </div>
         <!-- Gender -->
         <div id="Gender">
