Updated template.html Added explanation modal for gender. (This is especially helpful for explaining transgender and non-binary folk's gender, or lack of in the case of agender folks)

--- a/eng/template.html
+++ b/eng/template.html
@@ -88,6 +88,13 @@
             <span id="GenderTitle">Gender</span><br />
             Cis man
           </p>
+          <dialog id="GenderExplanation">
+            <button id="btnCloseGenderExplanantion" type="button" onclick="CloseModal('btnCloseGenderExplanantion', 'GenderExplanation')" autofocus>Close</button>
+            <p>
+              Example is cisgender, meaning that they identify as the gender that they were assigned with at birth.
+            </p>
+          </dialog>
+          <button id="btnOpenGenderExplanation" type="button" onclick="OpenModal('btnOpenGenderExplanation', 'GenderExplanation')">Explanation</button>
         </div>
       </div>
       <!-- The lead; the overall summary of the page -->
