Updated template.html Gave the infobox paragraphs ID's for the purpose of hooking CSS styling.

--- a/eng/template.html
+++ b/eng/template.html
@@ -35,42 +35,42 @@
         </div>
         <!-- Name in Japanese -->
         <div id="JapaneseName">
-          <p>
+          <p id="NameInJapan">
             <span id="JapaneseNameTitle">Japanese</span><br />
             <span class="japanese" lang="ja-JP">日本語</span> <span class="romaji">Nihongo</span>
           </p>
         </div>
         <!-- Name pronunciation -->
         <div id="NamePronunciation">
-          <p>
+          <p id="Pronunciation">
             <span id="NamePronunciationTitle">Pronunciation</span><br />
             /<span class="internation-phonetic-alphabet">ɲ̟ihõ̞ŋɡo̞</span>/
           </p>
         </div>
         <!-- Other names -->
         <div id="OtherName">
-          <p>
+          <p id="OtherNames">
             <span id="OtherNameTitle">Other names</span><br />
             Lorem ipsum
           </p>
         </div>
         <!-- Species -->
         <div id="Species">
-          <p>
+          <p id="Race">
             <span id="SpeciesTitle">Species</span><br />
             Indescribable
           </p>
         </div>
         <!-- Abilities -->
         <div id="Abilities">
-          <p>
+          <p id="Ability">
             <span id="AbilitiesTitle">Abilities</span><br />
             Unknown
           </p>
         </div>
         <!-- Sex Assigned at Birth -->
         <div id="SexAssignedAtBirth">
-          <p>
+          <p id="Sex">
             <span id="SexAssignedAtBirthTitle">Sex assigned at birth</span><br />
             AMAB
           </p>
@@ -84,7 +84,7 @@
         </div>
         <!-- Gender -->
         <div id="Gender">
-          <p>
+          <p id="LeGender">
             <span id="GenderTitle">Gender</span><br />
             Cis man
           </p>
