--- a/eng/template.html
+++ b/eng/template.html
@@ -96,6 +96,25 @@
           </dialog>
           <button id="btnOpenGenderExplanation" type="button" onclick="OpenModal('btnOpenGenderExplanation', 'GenderExplanation')">Explanation</button>
         </div>
+        <!-- Pronouns -->
+        <div id="Pronoun">
+          <p id="Pronouns">
+            <span id="PronounTitle">Pronouns</span><br />
+            He/him/his/himself
+          </p>
+          <dialog id="PronounUsageExample">
+            <button id="btnClosePronounUsageExample" type="button" onclick="CloseModal('btnClosePronounUsageExample', 'PronounUsageExample')" autofocus>Close</button>
+            <p class="pronoun-set">
+              he/him
+            </p>
+            <p id="PronounExample0">
+              <span class="subjective-pronoun">He</span> is talking with <span class="reflexive-pronoun">himself</span> about <span id="possessive-determiner-pronoun">his</span> day.
+              But who is answering <span class="objective-pronoun">him</span>, though?
+              Are these answers even <span class="possessive-pronoun">his</span>?
+            </p>
+          </dialog>
+          <button id="btnOpenPronounUsageExample" type="button" onclick="OpenModal('btnOpenPronounUsageExample', 'PronounUsageExample')">Usage example(s)</button>
+        </div>
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
