Updated template.html Added `Sexuality' section to the infobox.

--- a/eng/template.html
+++ b/eng/template.html
@@ -115,6 +115,21 @@
           </dialog>
           <button id="btnOpenPronounUsageExample" type="button" onclick="OpenModal('btnOpenPronounUsageExample', 'PronounUsageExample')">Usage example(s)</button>
         </div>
+        <!-- Sexuality -->
+        <div id="Sexuality">
+          <p id="Sexualities">
+            <span id="SexualityTitle">Gender</span><br />
+            Straight
+          </p>
+          <dialog id="SexualityExplanation">
+            <button id="btnCloseSexualityExplanantion" type="button" onclick="CloseModal('btnCloseSexualityExplanantion', 'SexualityExplanation')" autofocus>Close</button>
+            <p>
+              Example is <span class="sexuality">straight</span>, also known as heterosexual.
+              This means that he's attracted to the opposite gender.
+            </p>
+          </dialog>
+          <button id="btnOpenSexualityExplanation" type="button" onclick="OpenModal('btnOpenSexualityExplanation', 'SexualityExplanation')">Explanation</button>
+        </div>
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
