Updated template.html Gave the paragraph that is the title of the infobox the ID `InfoboxName'.

--- a/eng/template.html
+++ b/eng/template.html
@@ -27,7 +27,7 @@
       <div id="Infobox">
         <!-- Title of the infobox -->
         <div id="InfoboxTitle">
-          <p>Example</p>
+          <p id="InfoboxName">Example</p>
         </div>
         <!-- Picture of the subject (if available) -->
         <div id="InfoboxImage">
