Updated template.html Made the dialogs a little more accessible.

--- a/eng/template.html
+++ b/eng/template.html
@@ -74,7 +74,7 @@
             <span id="SexAssignedAtBirthTitle">Sex assigned at birth</span><br />
             AMAB
           </p>
-          <dialog id="SexExplanation">
+          <dialog id="SexExplanation" role="dialog" aria-label="Explanation of sex assigned at birth">
             <button id="btnCloseSexExplanantion" type="button" onclick="CloseModal('btnCloseSexExplanantion', 'SexExplanation')" autofocus>Close</button>
             <p>
               Example was assigned male at birth, meaning they were born with primarily male characteristics.
@@ -88,7 +88,7 @@
             <span id="GenderTitle">Gender</span><br />
             Cis man
           </p>
-          <dialog id="GenderExplanation">
+          <dialog id="GenderExplanation" role="dialog" aria-label="Explanation of gender identities">
             <button id="btnCloseGenderExplanantion" type="button" onclick="CloseModal('btnCloseGenderExplanantion', 'GenderExplanation')" autofocus>Close</button>
             <p>
               Example is cisgender, meaning that they identify as the gender that they were assigned with at birth.
@@ -102,7 +102,7 @@
             <span id="PronounTitle">Pronouns</span><br />
             He/him/his/himself
           </p>
-          <dialog id="PronounUsageExample">
+          <dialog id="PronounUsageExample" role="dialog" aria-label="Usage examples of preferred pronouns">
             <button id="btnClosePronounUsageExample" type="button" onclick="CloseModal('btnClosePronounUsageExample', 'PronounUsageExample')" autofocus>Close</button>
             <p class="pronoun-set">
               he/him
@@ -121,7 +121,7 @@
             <span id="SexualityTitle">Gender</span><br />
             Straight
           </p>
-          <dialog id="SexualityExplanation">
+          <dialog id="SexualityExplanation" role="dialog" aria-label="Explanation of sexualities">
             <button id="btnCloseSexualityExplanantion" type="button" onclick="CloseModal('btnCloseSexualityExplanantion', 'SexualityExplanation')" autofocus>Close</button>
             <p>
               Example is <span class="sexuality">straight</span>, also known as heterosexual.
