Updated template.html Changed the name of the infobox's `Sexuality' section from 'Gender' to 'Sexuality'.

--- a/eng/template.html
+++ b/eng/template.html
@@ -118,7 +118,7 @@
         <!-- Sexuality -->
         <div id="Sexuality">
           <p id="Sexualities">
-            <span id="SexualityTitle">Gender</span><br />
+            <span id="SexualityTitle">Sexuality</span><br />
             Straight
           </p>
           <dialog id="SexualityExplanation" role="dialog" aria-label="Explanation of sexualities">
