--- a/eng/template.html
+++ b/eng/template.html
@@ -132,6 +132,13 @@
           </dialog>
           <button id="btnOpenSexualityExplanation" type="button" onclick="OpenModal('btnOpenSexualityExplanation', 'SexualityExplanation')">Explanation</button>
         </div>
+        <!-- Age -->
+        <div id="Age">
+          <p id="PersonsAge">
+            <span id="AgeTitle">Age</span><br />
+            Over 9000!!
+          </p>
+        </div>
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
