Updated template.html Added a `Birthday' section to the infobox.

--- a/eng/template.html
+++ b/eng/template.html
@@ -139,6 +139,13 @@
             Over 9000!!
           </p>
         </div>
+        <!-- Birthday -->
+        <div id="Birthday">
+          <p id="DateOfBirth">
+            <span id="BirthdayTitle">Birthday</span>
+            Unknown
+          </p>
+        </div>
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
