Updated template.html Added a `Height' section to the infobox.

--- a/eng/template.html
+++ b/eng/template.html
@@ -146,6 +146,13 @@
             Unknown
           </p>
         </div>
+        <!-- Height -->
+        <div id="Height">
+          <p id="PersonsHeight">
+            <span id="HeightTitle">Height</span><br />
+            100.5 cm (≈3’3½”)
+          </p>
+        </div>
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
