--- a/eng/template.html
+++ b/eng/template.html
@@ -29,7 +29,7 @@
       <div id="Infobox">
         <!-- Title of the infobox -->
         <div id="InfoboxTitle">
-          <h2 id="InfoboxName">Example</p>
+          <h2 id="InfoboxName">Example</h2>
         </div>
         <!-- Picture of the subject (if available) -->
         <div id="InfoboxImage">
