Updated template.html Forgot a <br> tag... >_<

--- a/eng/template.html
+++ b/eng/template.html
@@ -142,7 +142,7 @@
         <!-- Birthday -->
         <div id="Birthday">
           <p id="DateOfBirth">
-            <span id="BirthdayTitle">Birthday</span>
+            <span id="BirthdayTitle">Birthday</span><br />
             Unknown
           </p>
         </div>
