Updated template.html Added a `Weight' section to the infobox.

--- a/eng/template.html
+++ b/eng/template.html
@@ -153,6 +153,13 @@
             100.5 cm (≈3’3½”)
           </p>
         </div>
+        <!-- Weight -->
+        <div id="Weight">
+          <p id="PersonsWeight">
+            <span id="WeightTitle">Weight</span><br />
+            99.69 kg (≈220.37 lbs)
+          </p>
+        </div>
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
