Updated template.html Added an `Occupation' section to the infobox.

--- a/eng/template.html
+++ b/eng/template.html
@@ -70,6 +70,13 @@
             Unknown
           </p>
         </div>
+        <!-- Occupation -->
+        <div id="Occupation">
+          <p id="Job">
+            <span id="OccupationTitle">Occupation</span><br />
+            Unknown
+          </p>
+        </div>
         <!-- Sex Assigned at Birth -->
         <div id="SexAssignedAtBirth">
           <p id="Sex">
