Updated multiple files [art.css ] Moved `art.css` from `gallery/` to `css/`. [ art.js ] Moved `art.js` from `gallery/` to `js/`. [art.html] Updated the paths to both of the aforementioned files.

--- a/gallery/art.html
+++ b/gallery/art.html
@@ -8,7 +8,7 @@
     <!-- Page title -->
     <title>Art Gallery / 美術館</title>
     <!-- The CSS stylesheet -->
-    <link rel="stylesheet" href="./art.css" />
+    <link rel="stylesheet" href="../css/art.css" />
   </head>
   <body id="DocumentBody">
     <header id="PageHead">
@@ -21,6 +21,6 @@
       
     </footer>
     <!-- JavaScript -->
-    <script src="art.js"></script>
+    <script src="../js/art.js"></script>
   </body>
 </html>
