Updated multiple files. [      index.html       ] Properly linked the <nav> links to the 'Under Construction' pages for the time being. [Under_Construction.html] Finished making the body contents. [ UnderConstruction.css ] Added the neccessary styling and made it responsive to viewport size.

--- a/eng/Under_Construction.html
+++ b/eng/Under_Construction.html
@@ -12,6 +12,14 @@
     <link rel="stylesheet" href="../css/UnderConstruction.css" />
   </head>
   <body id="DocumentBody">
-    
+    <main>
+      <h1 id="Title">UNDER CONSTRUCTION</h1>
+      <p>
+        I'm deeply sorry, but this page is currently under construction.
+        I don't know when the page will be finished.
+        So please be patient.
+        In the meantime, <span id="GoBackPC">click the browser's back button to go back to your previous page</span><span id="GoBackMobile">tap your device's back button to go back to your previous page</span>.
+      </p>
+    </main>
   </body>
 </html>
