--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         But not now.
       </p>
       <nav>
-        <a id="GotoEng" href="#">English</a>
+        <a id="GotoEng" href="eng/Under_Construction.html">English</a>
         <br />
-        <a id="GotoJap" href="#"><span lang="ja-JP" class="japanese">日本語</span> / Japanese</a>
+        <a id="GotoJap" href="jap/Under_Construction.html"><span lang="ja-JP" class="japanese">日本語</span> / Japanese</a>
         <br />
-        <a id="GotoGallery" href="#">Art Gallery</a>
+        <a id="GotoGallery" href="eng/Under_Construction.html">Art Gallery</a>
       </nav>
       <p>
         Click below to go back to the top.<br />
